snappass-redis.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: snappass
    name: snappass-redis
    tier: backend
  name: snappass-redis
spec:
  containers:
  - image: redis
    name: snappass-redis
    ports:
    - containerPort: 6379


---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: snappass
    name: snappass-redis
    tier: backend
  name: snappass-redis
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: snappass
    name: snappass-redis
    tier: backend
  type: ClusterIP
status:
  loadBalancer: {}
