ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: snappass-api-ingress
  namespace: default
  annotations:
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
  - host: snappass.rampanwar.info
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: snappass
            port: 
              number: 5000
